gen new api, refactor code with new api
